--- a/contact.html
+++ b/contact.html
@@ -314,24 +314,25 @@
                 <div class="col-lg-4">
                     <div class="contact-info">
                         <h3>Our contact details</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                        <p>Feel free to reach out to us!</p>
 
                         <ul class="address">
                             <li class="location">
                                 <i class="bx bxs-location-plus"></i>
-                                <span>Address</span> 6890 Blvd, The Bronx, NY 1058 New York, USA
+                                <span>Service Area</span> Clarksville, TN
+                                <br> Dover, TN <br> Oak Grove, KY <br> Woodlawn, TN
+                            </li>
+
                             </li>
                             <li>
                                 <i class="bx bxs-phone-call"></i>
                                 <span>Phone</span>
-                                <a href="tel:+1-(514)-312-5678">+1 (514) 312-5678</a>
-                                <a href="tel:+1-(514)-312-6677">+1 (514) 312-6677</a>
+                                <a href="tel:+1-(931) 320-8307">+1 (931) 320-8307</a>
                             </li>
                             <li>
                                 <i class="bx bxs-envelope"></i>
                                 <span>Email</span>
-                                <a href="mailto:hello@saaspol.com">hello@saaspol.com</a>
-                                <a href="#">skype: example</a>
+                                <a href="mailto:clarksvillepoolcleaning@gmail.com">clarksvillepoolcleaning@gmail.com</a>
                             </li>
                         </ul>
 
@@ -340,23 +341,18 @@
 
                             <ul class="social-wrap">
                                 <li>
-                                    <a href="#" target="_blank">
-                                        <i class="bx bxl-twitter"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#" target="_blank">
+                                    <a href="https://www.instagram.com/clarksvillepoolcleaning/" target="_blank">
                                         <i class="bx bxl-instagram"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" target="_blank">
+                                    <a href="https://www.facebook.com/ClarksvillePoolCleaning/" target="_blank">
                                         <i class="bx bxl-facebook"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" target="_blank">
-                                        <i class="bx bxl-youtube"></i>
+                                    <a href="https://g.page/r/CW8g9iFgVYADEAE" target="_blank">
+                                        <i class="bx bxl-google"></i>
                                     </a>
                                 </li>
                             </ul>
@@ -422,43 +418,12 @@
     </section>
     <!-- End Contact Area -->
 
-    <!-- Start Map Area -->
-    <div class="map-area">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96573.31103674119!2d-73.91097366523668!3d40.85176866829554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c28b553a697cb1%3A0x556e43a78ff15c77!2sThe%20Bronx%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1600202608808!5m2!1sen!2sbd"></iframe>
-    </div>
-    <!-- End Map Area -->
 
-    <!-- Start Subscribe Area -->
-    <section class="subscribe-area">
-        <div class="container ptb-100">
-            <div class="row align-items-center">
-                <div class="col-lg-3 col-md-4">
-                    <div class="subscribe-content">
-                        <span>SUBSCRIBE TO OUR</span>
-                        <h2>Newsletter</h2>
-                    </div>
-                </div>
-
-                <div class="col-lg-9 col-md-8">
-                    <form class="newsletter-form" data-toggle="validator">
-                        <input type="email" class="form-control" placeholder="Enter email address" name="EMAIL" required autocomplete="off">
-
-                        <button class="default-btn" type="submit">
-								<span>Subscribe now</span>
-							</button>
-
-                        <div id="validator-newsletter" class="form-result"></div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End Subscribe Area -->
 
     <!-- Start Footer Area -->
     <footer class="footer-area pt-100 pb-70">
-        <div class="container">
-            <div class="row">
+        <div class="container" style="text-align: center;">
+            <div class="row" style="justify-content: center;">
                 <div class="col-lg-3 col-md-6">
                     <div class="single-footer-widget">
                         <a href="index.html" class="logo">
@@ -470,7 +435,7 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="single-footer-widget">
-                        <h3 style="text-align:center; margin-right:-320px;">Our services</h3>
+                        <h3>Our services</h3>
 
                         <ul class="import-link">
                             <li style="text-align:center;">
@@ -482,17 +447,6 @@
                             <li style="text-align:center;">
                                 <a href="#">Sand Filter Changes</a>
                             </li>
-
-
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <div class="single-footer-widget">
-                        <h3 style="text-align:center; color:#201f25;">.</h3>
-
-                        <ul class="import-link">
                             <li style="text-align:center;">
                                 <a href="#">Maintenance</a>
                             </li>
@@ -502,26 +456,45 @@
                             <li style="text-align:center;">
                                 <a href="#">Deck Pressure Washing</a>
                             </li>
+
                         </ul>
                     </div>
                 </div>
+
+                <!-- <div class="col-lg-3 col-md-6">
+                        <div class="single-footer-widget">
+                            <h3 style="text-align:center; color:#201f25;">.</h3>
+    
+                            <ul class="import-link">
+                                <li style="text-align:center;">
+                                    <a href="#">Maintenance</a>
+                                </li>
+                                <li style="text-align:center;">
+                                    <a href="#">Openings and Closings</a>
+                                </li>
+                                <li style="text-align:center;">
+                                    <a href="#">Deck Pressure Washing</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div> -->
 
 
                 <div class="col-lg-3 col-md-6">
                     <div class="single-footer-widget">
                         <h3 style="text-align:center;">Contact us</h3>
 
-                        <ul class="address">
+                        <ul class="address" style="text-align: center;">
                             <li class="location">
-                                <i class="bx bxl-facebook" style="margin-left:11px;"></i>
+                                <i class="bx bxl-facebook" style="margin-left:30px;"></i>
                                 <a href="https://www.facebook.com/clarksvillepoolcleaning" target="_blank" style="margin-left:10px;">Message us on Facebook</a>
                             </li>
                             <li>
-                                <i class="bx bxs-envelope" style="margin-left:10px;"></i>
+                                <i class="bx bxs-envelope" style="margin-left:30px;"></i>
                                 <a href="mailto:clarksvillepoolcleaning@gmail.com" style="margin-left:10px;">Email Us</a>
                             </li>
                             <li>
-                                <i class="bx bxs-phone-call" style="margin-left:10px;"></i>
+                                <i class="bx bxs-phone-call" style="margin-left:30px;"></i>
                                 <a href="tel:+1-(931) 320-8307" style="margin-left:10px;">+1 (931) 320-8307</a>
                             </li>
                         </ul>
@@ -580,5 +553,6 @@
     <!-- Custom JS -->
     <script src="assets/js/custom.js"></script>
 </body>
+
 
 </html>
