--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                         <h2>All the quality service that we provide to our clients.</h2>
                         <p>We pride ourselves in being a one stop shop for all of your pool needs, whether you need full time service, a one time clean, or a complete overhaul of your pools surfaces. Clarksville Pool Cleaning is here for you.</p>
 
-                        <a href="services-Details.html" class="default-btn">
+                        <a href="services.html" class="default-btn">
                             <span>All services</span>
                         </a>
                     </div>
@@ -480,7 +480,7 @@
                             <div class="single-services">
                                 <span class="flaticon-swimming-pool"></span>
                                 <h3>
-                                    <a href="service-details.html">
+                                    <a href="greentoclean.html">
 											Green to Clean
 										</a>
                                 </h3>
@@ -488,7 +488,7 @@
                                 <p>If you have a nasty green pool and need to get rid of those frogs. This is the service for you. We will come out, net the pool, brush the walls, vacuum, and treat the water. We will follow up for the next few days to achieve
                                     the proper chemical balance.</p>
 
-                                <a href="service-details.html" class="read-more">
+                                <a href="greentoclean.html" class="read-more">
 										Read more
 										<i class="flaticon-right-arrow"></i>
 									</a>
@@ -499,7 +499,7 @@
                             <div class="single-services">
                                 <span class="flaticon-swimming-pool-3"></span>
                                 <h3>
-                                    <a href="service-details.html">
+                                    <a href="oneanddone.html">
 											One and Done
 										</a>
                                 </h3>
@@ -507,7 +507,7 @@
                                 <p>Just need a one time cleaning and water balancing? This is the deal for you. We will net, brush, vacuum, test the pool water, and add any necessary chemicals to insure a clean pool.
                                 </p>
 
-                                <a href="service-details.html" class="read-more">
+                                <a href="oneanddone.html" class="read-more">
 										Read more
 										<i class="flaticon-right-arrow"></i>
 									</a>
@@ -518,7 +518,7 @@
                             <div class="single-services">
                                 <span class="flaticon-temperature-control"></span>
                                 <h3>
-                                    <a href="service-details.html">
+                                    <a href="maintenance.html">
                       Stress Free Summer
 										</a>
                                 </h3>
@@ -537,8 +537,8 @@
                             <div class="single-services">
                                 <span class="flaticon-swimming-pool-2"></span>
                                 <h3>
-                                    <a href="service-details.html">
-											Pool deck cleaning
+                                    <a href="deckcleaning.html">
+											Pool Deck Cleaning
 										</a>
                                 </h3>
 
@@ -703,9 +703,9 @@
                                 <div class="form-group">
                                     <select>
 											<option value="1">Select your services</option>
-											<option value="2">Weekly Cleaning</option>
+											<option value="2">Green To Clean</option>
 											<option value="3">A One and Done</option>
-											<option value="4">A Green to Clean</option>
+											<option value="4">Sand Filter Change</option>
 											<option value="5">Monthly Maintenance</option>
                       <option value="6">A Stress Free Summer</option>
                       <option value="7">Deck Cleaning</option>
@@ -735,8 +735,8 @@
 
     <!-- Start Footer Area -->
     <footer class="footer-area pt-100 pb-70">
-        <div class="container">
-            <div class="row">
+        <div class="container" style="text-align: center;">
+            <div class="row" style="justify-content: center;">
                 <div class="col-lg-3 col-md-6">
                     <div class="single-footer-widget">
                         <a href="index.html" class="logo">
@@ -748,7 +748,7 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="single-footer-widget">
-                        <h3 style="text-align:center; margin-right:-320px;">Our services</h3>
+                        <h3>Our services</h3>
 
                         <ul class="import-link">
                             <li style="text-align:center;">
@@ -760,13 +760,21 @@
                             <li style="text-align:center;">
                                 <a href="#">Sand Filter Changes</a>
                             </li>
-
+                            <li style="text-align:center;">
+                                <a href="#">Maintenance</a>
+                            </li>
+                            <li style="text-align:center;">
+                                <a href="#">Openings and Closings</a>
+                            </li>
+                            <li style="text-align:center;">
+                                <a href="#">Deck Pressure Washing</a>
+                            </li>
 
                         </ul>
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
+                <!-- <div class="col-lg-3 col-md-6">
                     <div class="single-footer-widget">
                         <h3 style="text-align:center; color:#201f25;">.</h3>
 
@@ -782,24 +790,24 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
 
 
                 <div class="col-lg-3 col-md-6">
                     <div class="single-footer-widget">
                         <h3 style="text-align:center;">Contact us</h3>
 
-                        <ul class="address">
+                        <ul class="address" style="text-align: center;">
                             <li class="location">
-                                <i class="bx bxl-facebook" style="margin-left:11px;"></i>
+                                <i class="bx bxl-facebook" style="margin-left:30px;"></i>
                                 <a href="https://www.facebook.com/clarksvillepoolcleaning" target="_blank" style="margin-left:10px;">Message us on Facebook</a>
                             </li>
                             <li>
-                                <i class="bx bxs-envelope" style="margin-left:10px;"></i>
+                                <i class="bx bxs-envelope" style="margin-left:30px;"></i>
                                 <a href="mailto:clarksvillepoolcleaning@gmail.com" style="margin-left:10px;">Email Us</a>
                             </li>
                             <li>
-                                <i class="bx bxs-phone-call" style="margin-left:10px;"></i>
+                                <i class="bx bxs-phone-call" style="margin-left:30px;"></i>
                                 <a href="tel:+1-(931) 320-8307" style="margin-left:10px;">+1 (931) 320-8307</a>
                             </li>
                         </ul>
