--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -518,11 +518,10 @@
         </div>
     </section>
     <!-- End Subscribe Area -->
-
     <!-- Start Footer Area -->
     <footer class="footer-area pt-100 pb-70">
-        <div class="container">
-            <div class="row">
+        <div class="container" style="text-align: center;">
+            <div class="row" style="justify-content: center;">
                 <div class="col-lg-3 col-md-6">
                     <div class="single-footer-widget">
                         <a href="index.html" class="logo">
@@ -534,7 +533,7 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="single-footer-widget">
-                        <h3 style="text-align:center; margin-right:-320px;">Our services</h3>
+                        <h3>Our services</h3>
 
                         <ul class="import-link">
                             <li style="text-align:center;">
@@ -546,13 +545,21 @@
                             <li style="text-align:center;">
                                 <a href="#">Sand Filter Changes</a>
                             </li>
-
+                            <li style="text-align:center;">
+                                <a href="#">Maintenance</a>
+                            </li>
+                            <li style="text-align:center;">
+                                <a href="#">Openings and Closings</a>
+                            </li>
+                            <li style="text-align:center;">
+                                <a href="#">Deck Pressure Washing</a>
+                            </li>
 
                         </ul>
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
+                <!-- <div class="col-lg-3 col-md-6">
                     <div class="single-footer-widget">
                         <h3 style="text-align:center; color:#201f25;">.</h3>
 
@@ -568,24 +575,24 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
 
 
                 <div class="col-lg-3 col-md-6">
                     <div class="single-footer-widget">
                         <h3 style="text-align:center;">Contact us</h3>
 
-                        <ul class="address">
+                        <ul class="address" style="text-align: center;">
                             <li class="location">
-                                <i class="bx bxl-facebook" style="margin-left:11px;"></i>
+                                <i class="bx bxl-facebook" style="margin-left:30px;"></i>
                                 <a href="https://www.facebook.com/clarksvillepoolcleaning" target="_blank" style="margin-left:10px;">Message us on Facebook</a>
                             </li>
                             <li>
-                                <i class="bx bxs-envelope" style="margin-left:10px;"></i>
+                                <i class="bx bxs-envelope" style="margin-left:30px;"></i>
                                 <a href="mailto:clarksvillepoolcleaning@gmail.com" style="margin-left:10px;">Email Us</a>
                             </li>
                             <li>
-                                <i class="bx bxs-phone-call" style="margin-left:10px;"></i>
+                                <i class="bx bxs-phone-call" style="margin-left:30px;"></i>
                                 <a href="tel:+1-(931) 320-8307" style="margin-left:10px;">+1 (931) 320-8307</a>
                             </li>
                         </ul>
@@ -644,5 +651,6 @@
     <!-- Custom JS -->
     <script src="assets/js/custom.js"></script>
 </body>
+
 
 </html>
